# rag-agent-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pom.xml  setup.sh
.github/workflows/: backend-ci.yml  cli-ci.yml  cli-release.yml
agent-openapi/: go.mod  main.go
agent-openapi/config/: config.go
agent-openapi/handler/: agent.go  auth.go  conversation.go  handler.go  workflow.go
agent-openapi/keys/: store.go
agent-openapi/middleware/: signature.go
cli/: .goreleaser.yaml  install.sh  main.go  pyproject.toml
cli/agent_system/: api.py  config.py  main.py
cli/agent_system/commands/: auth.py  chat.py  verify.py  workflow.py
cli/api/: client.go  sign.go
cli/cmd/: auth.go  chat.go  color.go  keygen.go  root.go  uninstall.go  verify.go  workflow.go
cli/config/: config.go
frontend/: .env.local.example  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useTheme.ts  useTimezone.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: chatStore.ts  skillsStore.ts
frontend/src/types/: agent.ts
scheduler/: Dockerfile  go.mod  main.go
scheduler/config/: config.go
scheduler/cron/: runner.go
scheduler/handler/: handler.go
scheduler/model/: schedule.go
scheduler/store/: store.go
src/main/resources/: application.yml  schema.sql
(+182 files in other folders)
