[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
agent-system = "agent_system.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_system*"]
